src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>ADSLLine__c</fullName>
        <description>Please enter the phone number of the ADSL line</description>
        <label>old ADSLLine</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Addess_Town__c</fullName>
        <label>zzdel_Address Town</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>zzdel_Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>zzdel_Address 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_4__c</fullName>
        <label>zzdel_Address 4</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Details__c</fullName>
        <label>Address Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>zzdel_Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area1__c</fullName>
        <formula>IF( CONTAINS(Where__r.Name, &quot;Locality&quot;) , Where__r.Parent.Name , 
IF(CONTAINS(Where__r.Name,&quot;Area&quot;), Where__r.Name, 
IF(CONTAINS(Where__r.Name, &quot;Local Service Office&quot;), Where__r.Parent.Parent.Name, &quot;&quot;) 
))</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Area Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>old Area</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Central West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Anglia and Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North and East Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South and West Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Anglia &amp; Central Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South &amp; West NI Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North &amp; East NI Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakes Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Wales Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Wales Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central West Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_in_Sq_Feet__c</fullName>
        <label>Area in Sq Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_in_Sq_Meters__c</fullName>
        <formula>Area_in_Sq_Feet__c  * 0.09290304</formula>
        <label>Area in Sq Meters</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asbestos_Survey__c</fullName>
        <label>Asbestos Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000+ not required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>old Cost Centre ( organisation )</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Cost Centre ( organisation ))</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Break_Date__c</fullName>
        <label>old Break Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Break_Description__c</fullName>
        <label>old Break Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>old Building Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Buildings_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>old Buildings Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Parking_Spaces__c</fullName>
        <label>Car Parking Spaces</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_to_view_files__c</fullName>
        <formula>HYPERLINK( Photos__c, Photos__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>old Click to view files</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Commissioning_Group__c</fullName>
        <label>Clinical Commissioning Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Please enter any significant comments regarding the location</description>
        <inlineHelpText>Please enter any significant comments regarding the location</inlineHelpText>
        <label>old Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contents_Cover__c</fullName>
        <label>old Contents Cover</label>
        <picklist>
            <picklistValues>
                <fullName>From £10,001 - £15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From £130,001 - £131,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From £15,001 - £20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From £20,001 - £30,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From £30,001 - £40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From £55,001 - £56,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to £3,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Alert__c</fullName>
        <formula>IMAGE
(

  IF(Contract_Expiry_Due_Days__c &gt;30, &quot;/img/samples/flag_green.gif&quot;,
    IF(
        AND(Contract_Expiry_Due_Days__c &lt;=30,Contract_Expiry_Due_Days__c&gt;=20), 
           &quot;/img/samples/flag_yellow.gif&quot;,
       IF(
          AND(Contract_Expiry_Due_Days__c &lt;=7,NOT(ISNULL(Contract_Expiry_Due_Days__c))), &quot;/img/samples/flag_red.gif&quot;,&quot;/s.gif&quot;))),
      &quot;s.gif&quot;)</formula>
        <label>Contract Expiry Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Date__c</fullName>
        <label>Contract Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expiry_Due_Days__c</fullName>
        <formula>IF(Contract_Expiry_Date__c&gt;=Today(),Contract_Expiry_Date__c-Today(),null)</formula>
        <label>Contract Expiry Due(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>old Contract Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCentreAuto__c</fullName>
        <formula>IF(Region_Office__c = TRUE,
IF(CONTAINS(Where__r.Name, &quot;Area&quot;),  Where__r.Parent.COst_Centre__c , IF( CONTAINS(Where__r.Name, &quot;Region&quot;),
 Where__r.COst_Centre__c ,
IF(CONTAINS(Where__r.Name,&quot;Locality&quot;),  Where__r.Parent.Parent.COst_Centre__c ,
IF(CONTAINS(Where__r.Name,&quot;Local Service Office&quot;),  Where__r.Parent.Parent.Parent.COst_Centre__c ,&quot;&quot;)
))),
IF(Area_Office__c = TRUE,
IF( CONTAINS(Where__r.Name, &quot;Locality&quot;) , Where__r.Parent.COst_Centre__c , 
IF(CONTAINS(Where__r.Name,&quot;Area&quot;), Where__r.COst_Centre__c, 
IF(CONTAINS(Where__r.Name, &quot;Local Service Office&quot;), Where__r.Parent.Parent.COst_Centre__c, &quot;&quot;) 
)),
IF(Locality_Office__c = TRUE,
IF( CONTAINS( Where__r.Name , &quot;Office&quot;) , 
Where__r.Parent.COst_Centre__c , 
IF(CONTAINS(Where__r.Name,&quot;Locality&quot;), Where__r.COst_Centre__c,&quot;&quot;)),
Where__r.COst_Centre__c
)))</formula>
        <label>Cost Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateRecievedProcessing__c</fullName>
        <label>old Recieved for Processing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSentToCompliance__c</fullName>
        <label>old Date sent to Compliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Lease_Entered_Into__c</fullName>
        <label>old Date Lease Entered Into</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Occupation__c</fullName>
        <label>Date of Occupation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Vacation__c</fullName>
        <label>Date of Vacation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>old Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directorate__c</fullName>
        <label>Directorate</label>
        <picklist>
            <picklistValues>
                <fullName>Operations</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <description>The email contact for this location</description>
        <inlineHelpText>The email contact for this location</inlineHelpText>
        <label>old EMAIL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Earliest_Break_Date__c</fullName>
        <label>old Lease notice date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Easting__c</fullName>
        <label>Easting</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facilities__c</fullName>
        <label>Facilities</label>
        <picklist>
            <picklistValues>
                <fullName>Air Conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographic_Location__c</fullName>
        <label>Geographic Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Landlord Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Category__c</field>
                <operation>equals</operation>
                <value>Landlord, Landlord Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Landlord Agent)</relationshipLabel>
        <relationshipName>Locations6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlord_Comments__c</fullName>
        <label>old Landlord Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Landlord_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord Solicitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Category__c</field>
                <operation>equals</operation>
                <value>Landlord Solicitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Landlord Solicitor)</relationshipLabel>
        <relationshipName>Locations7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Landlord</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Category__c</field>
                <operation>equals</operation>
                <value>Landlord, Landlord Agent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Landlord)</relationshipLabel>
        <relationshipName>Locations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landlord_or_Agent_Contact_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>old Landlord or Agent Contact Details</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Landlord or Agent Contact Details)</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_start_date__c</fullName>
        <label>Max contract start date</label>
        <summarizedField>Property_Contract__c.Contract_Start_Date__c</summarizedField>
        <summaryForeignKey>Property_Contract__c.Location__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>old Lease</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Comments__c</fullName>
        <label>old Legal Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locality1__c</fullName>
        <formula>IF( CONTAINS( Where__r.Name , &quot;Office&quot;) , 
Where__r.Parent.Name , 
IF(CONTAINS(Where__r.Name,&quot;Locality&quot;), Where__r.Name,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality_Cost_Centre__c</fullName>
        <formula>IF(Where__r.RecordType.Name = &apos;Internal Organisation&apos;,

          IF(CONTAINS(Where__r.Name,&apos;Locality&apos;),
		  Where__r.COst_Centre__c,
		  
          IF(CONTAINS(Where__r.Name,&apos;Local Service Office&apos;),Where__r.Parent.COst_Centre__c,&apos;&apos;)),&apos;&apos;)</formula>
        <label>Locality Cost Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality_Manager__c</fullName>
        <label>old Locality Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locality Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <label>old Locality</label>
        <picklist>
            <controllingField>Area__c</controllingField>
            <picklistValues>
                <fullName>Avon, Wiltshire and Gloucestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedfordshire and Luton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berkshire, Buckinghamshire and Oxfordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham and Solihull, Black Country and Warwarkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bro Morgannwg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridgeshire and Peterborough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff and the Vale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire and St Helens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumbria Central, South and Furness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumbria West and Carlisle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cwm Taff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darlington and Teesside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derbyshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devon, Cornwall and Isles of Scilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Riding and Humber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Manchester Central and West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Manchester Central South and East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gwent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hampshire, Isle of Wight and the Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herefordshire and Worcestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hertfordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent and Medway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lancashire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicestershire and Rutland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincolnshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merseyside and Isle of Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midlands Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Label__c</fullName>
        <formula>TEXT(Locality__c)  &amp; &quot;,&quot; &amp;   TRIM(Left (Street__c, 30)) &amp; &quot;,&quot; &amp;  Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>old Location Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <label>Location Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_Term_End_Date__c</fullName>
        <description>The end date for the current term</description>
        <inlineHelpText>The end date for the current term</inlineHelpText>
        <label>old Minimum Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Term__c</fullName>
        <description>The term of the lease in month</description>
        <inlineHelpText>The term of the lease in month</inlineHelpText>
        <label>old Minimum Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_Comments__c</fullName>
        <inlineHelpText>Once this service has changed location enter details of the new property this service has moved to: please include its Salesforce id number and full address.</inlineHelpText>
        <label>old Move Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_PCs_and_laptops__c</fullName>
        <label>old No of PCs and laptops</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Northing__c</fullName>
        <label>Northing</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>old Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>old Our Solicitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Our Solicitor)</relationshipLabel>
        <relationshipName>Locations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per__c</fullName>
        <label>Per</label>
        <picklist>
            <picklistValues>
                <fullName>Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Photos__c</fullName>
        <label>old Photos</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Postal_Reference__c</fullName>
        <label>old Postal Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Constituency__c</fullName>
        <label>Postcode Constituency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Local_Authority__c</fullName>
        <label>Postcode Local Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Primary_Care_Trust__c</fullName>
        <label>Postcode Primary Care Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Ward__c</fullName>
        <label>Postcode Ward</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_indemnity_cover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>old Professional indemnity cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Alias__c</fullName>
        <formula>City__c &amp;&quot;, &quot;&amp; Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <label>Property ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Status__c</fullName>
        <label>Property Status</label>
        <picklist>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_liability_cover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>old Public liability cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>old Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region1__c</fullName>
        <formula>IF( CONTAINS(Where__r.Name, &quot;Area&quot;) , Where__r.Parent.Name , IF(CONTAINS(Where__r.Name,&quot;Region&quot;), 
Where__r.Name, 
IF (CONTAINS(Where__r.Name,&quot;Locality&quot;), Where__r.Parent.Parent.Name, 
IF (CONTAINS(Where__r.Name,&quot;Local Service Office&quot;), Where__r.Parent.Parent.Parent.Name, &quot;&quot;) 
)))</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Region Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>old Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rent_Commencement_Date__c</fullName>
        <label>old Rent Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Review__c</fullName>
        <label>old Rent Review</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>old Rent</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Description__c</fullName>
        <label>old Rental Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <description>The email of the person who acts as the responsible person for this location for security and Health and Safety matters</description>
        <label>old Responsible Person</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <label>old Service Charge</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Provision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Provision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_charge_description__c</fullName>
        <label>old Service Charge Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Society_fleet_policy_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>old Society fleet policy required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>old Solicitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Solicitor)</relationshipLabel>
        <relationshipName>Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>old Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move in planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning to vacate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Status_Comments__c</fullName>
        <label>old Strategic Status Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Status__c</fullName>
        <label>old Strategic Status</label>
        <picklist>
            <picklistValues>
                <fullName>Vacate ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacate on break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep for Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Line_1__c</fullName>
        <label>Street Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>